--- a/contact-me.html
+++ b/contact-me.html
@@ -10,7 +10,7 @@
   <p>0987553321</p>
   <p>acdtinmiu@gmail.com</p>
   <hr>
-  <from class=""action="mailto:achyuthaachyutha592@gmail.com" method="post" enctype="text/plain">
+  <from class=""action=index.html" method="post" enctype="text/plain">
     <lable>Your name:</lable>
     <input type="text" name="YourName"value=""><br>
     <lable>Your Email:</lable>
