--- a/contact-me.html
+++ b/contact-me.html
@@ -10,14 +10,14 @@
   <p>0987553321</p>
   <p>acdtinmiu@gmail.com</p>
   <hr>
-  <from class=""action=index.html" method="post" enctype="text/plain">
-    <lable>Your name:</lable>
-    <input type="text" name="YourName"value=""><br>
-    <lable>Your Email:</lable>
-    <input type="Email" name="YourEmail"value=""><br>
-    <lable>Your Message:</lable>
-    <textarea name="YourMessage" rows="10" clos="30"></textarea><br>
-    <input type="submit" name="">
-  </from>
+    <form action="index.html" method="post" enctype="text/plain">
+      <label for="fname">First name: </label>
+      <input type="text" id="fname" name="fname"><br>
+     <label for="email">Email: </label>
+     <input type="text" id="email" name="email"><br>
+     <label>Your Message:</label>
+     <textarea name="name" rows="8" clos="80"></textarea><br>
+     <input type="submit" value="Submit">
+</form>
 </body>
 </html>
